--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Django = "^4.1.6"
 djangorestframework = "^3.14.0"
 rich = "^13.4.2"
 whitenoise = "^6.5.0"
+bleach = "^6.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
